Добавил кнопку Войти на главную страницу

--- a/Website/Resources/Views/Shared/_Layout.ru.resx
+++ b/Website/Resources/Views/Shared/_Layout.ru.resx
@@ -123,6 +123,9 @@
   <data name="Home" xml:space="preserve">
     <value>Личный кабинет</value>
   </data>
+  <data name="Login" xml:space="preserve">
+    <value>Войти</value>
+  </data>
   <data name="News" xml:space="preserve">
     <value>Новости</value>
   </data>
