Теперь отображается имя пользователя. Небольшие изменения в работе кнопок верхнего меню. Добавлен перевод некоторых кнопок.

--- a/Website/Resources/Views/Shared/_Layout.ru.resx
+++ b/Website/Resources/Views/Shared/_Layout.ru.resx
@@ -126,6 +126,12 @@
   <data name="Login" xml:space="preserve">
     <value>Войти</value>
   </data>
+  <data name="LoginAs" xml:space="preserve">
+    <value>Войти как</value>
+  </data>
+  <data name="ChangeLogin" xml:space="preserve">
+    <value>Сменить аккаунт</value>
+  </data>
   <data name="News" xml:space="preserve">
     <value>Новости</value>
   </data>
