--- a/Website/Resources/Views/Shared/_LayoutHome.ru.resx
+++ b/Website/Resources/Views/Shared/_LayoutHome.ru.resx
@@ -117,20 +117,26 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Bots" xml:space="preserve">
+    <value>Боты</value>
+  </data>
   <data name="Bots constructor" xml:space="preserve">
     <value>Конструктор ботов</value>
   </data>
   <data name="Home" xml:space="preserve">
     <value>Личный кабинет</value>
   </data>
+  <data name="Logout" xml:space="preserve">
+    <value>Выйти</value>
+  </data>
   <data name="News" xml:space="preserve">
     <value>Новости</value>
   </data>
+  <data name="Orders" xml:space="preserve">
+    <value>Заказы</value>
+  </data>
   <data name="Privacy" xml:space="preserve">
     <value>Конфиденциальность</value>
-  </data>
-  <data name="SignUp" xml:space="preserve">
-    <value>Регистрация</value>
   </data>
   <data name="Support" xml:space="preserve">
     <value>Поддержка</value>
